[gd_scene load_steps=9 format=3 uid="uid://cfco3khamdo54"]

[ext_resource type="Script" path="res://Scripts/game_scene.gd" id="1_0j0ay"]
[ext_resource type="PackedScene" uid="uid://dpv2td7wftexi" path="res://Scenes/Airplane.tscn" id="1_ruok5"]
[ext_resource type="Script" path="res://Scripts/globals.gd" id="3_vi5ju"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_efpxn"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_a5l16"]

[sub_resource type="Gradient" id="Gradient_rdorf"]
offsets = PackedFloat32Array(0.534517, 0.56213)
colors = PackedColorArray(0.438277, 0.438277, 0.438277, 1, 0.12549, 0.141176, 0.176471, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eb6u7"]
gradient = SubResource("Gradient_rdorf")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_84ufs"]
font_size = 21

[node name="MainScene" type="Node2D"]
script = ExtResource("1_0j0ay")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.12549, 0.141176, 0.176471, 1)
metadata/_edit_use_anchors_ = true

[node name="Map" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Map"]
offset_left = 35.0
offset_top = 30.0
offset_right = 1888.0
offset_bottom = 125.0
color = Color(0, 0, 0, 1)

[node name="Blue zone" type="ColorRect" parent="Map"]
material = SubResource("CanvasItemMaterial_efpxn")
offset_left = 496.0
offset_top = 40.0
offset_right = 1551.0
offset_bottom = 117.0
color = Color(0, 0.274239, 0.537999, 1)

[node name="Red zone" type="ColorRect" parent="Map"]
material = SubResource("CanvasItemMaterial_efpxn")
offset_left = 50.0
offset_top = 41.0
offset_right = 271.0
offset_bottom = 118.0
color = Color(0.541176, 0, 0, 1)

[node name="Divider" type="ColorRect" parent="Map"]
offset_left = 35.0
offset_top = 76.0
offset_right = 1888.0
offset_bottom = 79.0
color = Color(0.907308, 0.486548, 9.62615e-07, 1)

[node name="Plane" parent="Map" instance=ExtResource("1_ruok5")]
position = Vector2(1911, -34)

[node name="Markers" type="Node" parent="Map"]

[node name="MapStart" type="Node2D" parent="Map/Markers"]
material = SubResource("CanvasItemMaterial_a5l16")
position = Vector2(1853, 77)

[node name="MapEnd" type="Node2D" parent="Map/Markers"]
material = SubResource("CanvasItemMaterial_a5l16")
position = Vector2(76, 80)
script = ExtResource("3_vi5ju")

[node name="MapInterceptorStart" type="Node2D" parent="Map/Markers"]
material = SubResource("CanvasItemMaterial_a5l16")
position = Vector2(1537, 79)

[node name="MapInterceptorEnd" type="Node2D" parent="Map/Markers"]
material = SubResource("CanvasItemMaterial_a5l16")
position = Vector2(530, 81)

[node name="Scanner" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Scanner"]
position = Vector2(950, 457)
scale = Vector2(10.2109, 9.912)
texture = SubResource("GradientTexture2D_eb6u7")

[node name="Layout" type="Node2D" parent="."]

[node name="Layout6" type="ColorRect" parent="Layout"]
material = SubResource("CanvasItemMaterial_efpxn")
offset_left = 146.0
offset_top = 754.0
offset_right = 403.0
offset_bottom = 1021.0
color = Color(0, 0, 0, 1)

[node name="Layout5" type="ColorRect" parent="Layout"]
material = SubResource("CanvasItemMaterial_efpxn")
offset_left = 1369.0
offset_top = 626.0
offset_right = 1840.0
offset_bottom = 1013.0
color = Color(0, 0, 0, 1)

[node name="Layout3" type="ColorRect" parent="Layout"]
material = SubResource("CanvasItemMaterial_efpxn")
offset_left = 1641.0
offset_top = 270.0
offset_right = 1898.0
offset_bottom = 537.0
color = Color(0, 0, 0, 1)

[node name="Layout" type="ColorRect" parent="Layout"]
material = SubResource("CanvasItemMaterial_efpxn")
offset_left = 102.0
offset_top = 238.0
offset_right = 445.0
offset_bottom = 674.0
color = Color(0, 0, 0, 1)

[node name="FlightDetailsPanel" type="Node" parent="Layout"]

[node name="Background" type="ColorRect" parent="Layout/FlightDetailsPanel"]
material = SubResource("CanvasItemMaterial_efpxn")
offset_left = 1350.0
offset_top = 272.0
offset_right = 1607.0
offset_bottom = 539.0
color = Color(0, 0, 0, 1)

[node name="SpeedLabel" type="Label" parent="Layout/FlightDetailsPanel"]
offset_left = 1366.0
offset_top = 292.0
offset_right = 1415.0
offset_bottom = 315.0
text = "SPEED
"
label_settings = SubResource("LabelSettings_84ufs")

[node name="SpeedValue" type="Label" parent="Layout/FlightDetailsPanel"]
offset_left = 1527.0
offset_top = 292.0
offset_right = 1590.0
offset_bottom = 322.0
text = "00000
"
label_settings = SubResource("LabelSettings_84ufs")

[node name="ButtonIntercept" type="Button" parent="."]
offset_left = 728.0
offset_top = 823.0
offset_right = 848.0
offset_bottom = 893.0
text = "INTERCEPT"

[connection signal="pressed" from="ButtonIntercept" to="." method="_on_button_intercept_pressed"]
